--- a/gridly_grids/Cargo.toml
+++ b/gridly_grids/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Nathan West <Lucretiel@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-gridly = { path = "../gridly" }
+gridly = { path = "../gridly", version = "0.2.0" }
