--- a/gridly_grids/Cargo.toml
+++ b/gridly_grids/Cargo.toml
@@ -3,6 +3,18 @@ name = "gridly_grids"
 version = "0.1.0"
 authors = ["Nathan West <Lucretiel@gmail.com>"]
 edition = "2018"
+description = "Some basic implementations of gridly grids"
+license = "MPL-2.0"
+repository = "https://github.com/Lucretiel/gridly-rs"
+readme = "README.md"
+categories = [
+	"no-std",
+	"games"
+]
 
 [dependencies]
 gridly = { path = "../gridly", version = "0.2.0" }
+
+[badges]
+travis-ci = { repository = "Lucretiel/gridly-rs" }
+maintenance = { status = "actively-developed" }
