All sorts of updates

--- a/gridly/Cargo.toml
+++ b/gridly/Cargo.toml
@@ -16,3 +16,6 @@ categories = [
 [badges]
 travis-ci = { repository = "Lucretiel/gridly-rs" }
 maintenance = { status = "actively-developed" }
+
+[dev-dependencies]
+gridly_grids = { path = "../gridly_grids", version = "0.2.0" }
