--- a/gridly/Cargo.toml
+++ b/gridly/Cargo.toml
@@ -18,5 +18,5 @@ travis-ci = { repository = "Lucretiel/gridly-rs" }
 maintenance = { status = "actively-developed" }
 
 [dev-dependencies]
-gridly_grids = { path = "../gridly_grids", version = "0.2.0" }
+# gridly_grids = { path = "../gridly_grids", version = "0.2.0" }
 cool_asserts = "1.0.0"
